--- a/PortableF/PortableF.fsproj
+++ b/PortableF/PortableF.fsproj
@@ -39,10 +39,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Interop.PortableDeviceApiLib">
-      <HintPath>..\..\..\..\..\Documents\Visual Studio 2013\Projects\PortableDevices\InteropAssemblies\Interop.PortableDeviceApiLib.dll</HintPath>
+      <HintPath>..\InteropAssemblies\Interop.PortableDeviceApiLib.dll</HintPath>
     </Reference>
     <Reference Include="Interop.PortableDeviceTypesLib">
-      <HintPath>..\..\..\..\..\Documents\Visual Studio 2013\Projects\PortableDevices\InteropAssemblies\Interop.PortableDeviceTypesLib.dll</HintPath>
+      <HintPath>..\InteropAssemblies\Interop.PortableDeviceTypesLib.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
