--- a/PortableF/PortableF.fsproj
+++ b/PortableF/PortableF.fsproj
@@ -53,9 +53,20 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PortableDeviceHeader.fs" />
+    <Compile Include="PDTypes.fs" />
+    <Compile Include="PDInterfaceInstanceProvider.fs" />
+    <Compile Include="PDUtils.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <None Include="Portable.fsx" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WPDCommon\WPDCommon.csproj">
+      <Name>WPDCommon</Name>
+      <Project>{b3d9a752-6b5f-4760-a5b2-528c0840268d}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
