--- a/PortableFsx/PortableFsx.fsproj
+++ b/PortableFsx/PortableFsx.fsproj
@@ -5,14 +5,14 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>05724f90-f6be-49dc-9464-46ad3b7a1057</ProjectGuid>
+    <ProjectGuid>b638fbe7-29d8-458a-8fd2-b9b373b0c903</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>PortableF</RootNamespace>
-    <AssemblyName>PortableF</AssemblyName>
+    <RootNamespace>PortableFsx</RootNamespace>
+    <AssemblyName>PortableFsx</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
-    <Name>PortableF</Name>
+    <Name>PortableFsx</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Debug\PortableF.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\PortableFsx.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -34,16 +34,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Release\PortableF.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\PortableFsx.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Interop.PortableDeviceApiLib">
-      <HintPath>..\InteropAssemblies\Interop.PortableDeviceApiLib.dll</HintPath>
-    </Reference>
-    <Reference Include="Interop.PortableDeviceTypesLib">
-      <HintPath>..\InteropAssemblies\Interop.PortableDeviceTypesLib.dll</HintPath>
-    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
@@ -53,21 +47,10 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PDHeader.fs" />
-    <Compile Include="PDHeaderUtils.fs" />
-    <Compile Include="PDTypes.fs" />
-    <Compile Include="HelperFunctions.fs" />
-    <Compile Include="PDInterfaceInstanceProvider.fs" />
-    <Compile Include="PDUtils.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WPDCommon\WPDCommon.csproj">
-      <Name>WPDCommon</Name>
-      <Project>{b3d9a752-6b5f-4760-a5b2-528c0840268d}</Project>
-      <Private>True</Private>
-    </ProjectReference>
+    <None Include="TestHeaderDecoder.fsx" />
+    <None Include="PortableDeviceHeaderParser.fsx" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
