added meta module

--- a/PortableF/PortableF.fsproj
+++ b/PortableF/PortableF.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="PDUtils.fs" />
     <Compile Include="PDInterfaceInstanceProvider.fs" />
     <Compile Include="PDContent.fs" />
+    <Compile Include="Meta.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
