--- a/PDTest/app.config
+++ b/PDTest/app.config
@@ -8,4 +8,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="xunit.parallelizeTestCollections" value="false"/>
+  </appSettings>
 </configuration>
