--- a/PortableF/PortableF.fsproj
+++ b/PortableF/PortableF.fsproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>05724f90-f6be-49dc-9464-46ad3b7a1057</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>PortableF</RootNamespace>
     <AssemblyName>PortableF</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -57,13 +57,13 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
+    <Compile Include="PDGlobalTypes.fs" />
     <Compile Include="PDHeader.fs" />
     <Compile Include="PDHeaderIndices.fs" />
-    <Compile Include="PDGlobalTypes.fs" />
     <Compile Include="PDHeaderUtils.fs" />
     <Compile Include="HelperFunctions.fs" />
-    <Compile Include="PDUtils.fs" />
     <Compile Include="PDInterfaceInstanceProvider.fs" />
+    <Compile Include="PDUtils.fs" />
     <Compile Include="PDContent.fs" />
     <Compile Include="Meta.fs" />
     <Compile Include="Program.fs" />
